setup project files
changes made from practise to project

--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "chaibackend",
   "version": "1.0.0",
   "description": "a basic app to deploy",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
+    "dev": "nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -18,5 +20,8 @@
   "dependencies": {
     "dotenv": "^16.4.7",
     "express": "^4.21.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9"
   }
 }
